2010-09-07  David Bateman  <dbateman@free.fr>

	* plot/plotyy.m: Don't add the __plotyy_axes__ property to the
	axes handles if iit already exists.

2010-09-06  Petr Mikulik <mikulik@physics.muni.cz>

	* geometry/griddata.m: Allow x, y to be vectors, and z a matrix.

2010-09-03  David Bateman  <dbateman@free.fr>

	* geometry/delaunay.m: Allow the delaunay function to treat
	matrices of the same size for compatibility.

2010-09-03  Ben Abbott <bpabbott@mac.com>

	* image/image.m: Matlab compatible axis limits, add demo.

2010-09-01  Jaroslav Hajek  <highegg@gmail.com>

	* io/dlmwrite.m: Don't fclose if file ID is supplied.

2010-09-01  Jaroslav Hajek  <highegg@gmail.com>

	* io/dlmwrite.m: Support file IDs.

2010-07-07  David Bateman  <dbateman@free.fr>

	* miscellaneous/what.m: Off by one error.

	* plot/__go_draw_axes__.m: Improve matlab compatibility for "."
	marker.

2010-08-31  Ben Abbott <bpabbott@mac.com>

	* plot/private/__actual_axis_position__.m, plot/__go_draw_axes__.m,
	plot/axis.m, plot/colorbar.m, plot/daspect.m, plot/plotyy.m,
	plot/subplot.m: Treatment of activepositionproperty for gnuplot.
	* plot/__go_draw_axes__.m: Missing part of last changeset.
	* plot/__go_draw_axes__.m: Fix specification of pointtype for patches
	(bug introduced in rev 2f9de135e7f9).

2010-08-30  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Use gnuplot's pentagon for marker == 'p'.

2010-08-27  Ben Abbott <bpabbott@mac.com>

	* plot/colorbar.m, * plot/__go_draw_axes__.m,
	plot/private/__actual_axis_position__.m: Don't pass figure handle to
	__calc_dimensions__.
	* plot/private/__ghostscript__.m: Don't set anti-aliasing options for
	vector formats.
	* plot/__print_parse_opts__.m: Fix tests.

2010-08-27  Jordi Gutiérrez Hermoso  <jordigh@gmail.com>

	* plot/__go_draw_axes__.m (__calc_dimensions__): Delete.
	* plot/__actual_axis_position__.m (__calc_dimensions__): Delete.

2010-08-27  Pascal A. Dupuis  <Pascal.Dupuis@worldonline.be>
